--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs-sdks"]
 	path = libs-sdks
 	url = https://github.com/martinpaljak/oracle_javacard_sdks.git
+[submodule "applet/project"]
+	path = applet/project
+	url = https://github.com/JavaCardSpot-dev/ykneo-openpgp.git
